--- a/MasterPage.master
+++ b/MasterPage.master
@@ -7,14 +7,53 @@
     <title></title>
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <form id="form1" runat="server">
-    <div>
-        <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
+    <div id="container">
+        <div id="header">
+           
+            <h1>Welcome to JUMP for JOY</h1>
+            <h3>Bouncer sales and rental</h3>
+        </div>
+        <div id="content">
+            <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
         
         </asp:ContentPlaceHolder>
+
+
+
+        </div>
+        <div id="footer">
+            <div>
+                <p>Site Map</p>
+                <ul>
+                    <li><a href="contacts.aspx">Contacts</a></li>
+                    <li>Register</li>
+                    <li>Login</li>
+                    <li>Search</li>
+                    
+
+                </ul>
+
+            </div>
+            <div>
+                <a href="http://validator.w3.org/check?uri=referer">Validate HTML</a> |
+<a href="http://jigsaw.w3.org/css-validator/check/referer">Validate CSS</a> |
+<a href="http://achecker.ca/checker/?uri=referer">Check WCAG</a>
+            </div>
+            <div>
+
+                <img src="images/facebook.png" />
+      <img src="images/instagram.ico" />
+      <img src="images/twitter.png" />
+            </div>
+
+
+        </div>
     </div>
     </form>
 </body>
 </html>
+
