linked master page to default.aspx

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ height:400px;
 
        #mainpage div {
         float:right;    
-        border:5px dashed #ac161f;;
+        border:5px dashed #ac161f;
         width:30%;
         margin:10px;
         text-align:center;
