--- a/MasterPage.master
+++ b/MasterPage.master
@@ -15,7 +15,7 @@
         <div id="header">
            
             <h1>Welcome to JUMP for JOY</h1>
-            <h3>Bouncer sales and rental</h3>
+            <h3>Bouncer sales</h3>
         </div>
         <div id="content">
             <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
